2011-08-20  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/adapter.cpp: Fix program crash for solveepd with st 30.

2011-07-31  Antonio Ceballos  <aceballos@gmail.com>

	* doc/gnuchess.texi: 'book.dat' replaced by 'book.bin'.

2011-07-30  Antonio Ceballos  <aceballos@gmail.com>

	* INSTALL: 'cd src' before './gnuchess'

2011-07-30  Antonio Ceballos  <aceballos@gmail.com>

	* src/components.cc: if gnuchess.ini is not found, report error
	before prompt.
	* src/adapter/main.cpp: if gnuchess.ini is not found, report error
	before prompt.
	* TODO: if gnuchess.ini is not found, report error before prompt.

2011-07-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/adapter.cpp: after 'book on', open the book.

2011-06-23  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/adapter.cpp: use strlen instead of sizeof to get
	length of book file name.

2011-05-02  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/common.h: remove declarations of unused functions 
	and variables.
	* src/frontend/cmd.c: remove initialization of unused variable,
	* src/frontend/init.c: remove unused functions.
	* src/main.cc: remove unused variables.

2011-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/Makefile.am: remove unused code: ttable.c
	* src/frontend/ttable.c: remove unused file.
	* src/frontend/common.h: remove declarations of functions defined
	in ttable.c; remove declaration of unused variable: HashTab[].
	* src/frontend/pgn.c: remove unused code: call to TTClear();
	* src/main.cc: removed unused code: references to HashTab[].

2011-04-27  Antonio Ceballos  <aceballos@gmail.com>

	* INSTALL: typo in book file name.

2011-04-24  Antonio Ceballos  <aceballos@gmail.com>

	* AUTHORS: correct e-mail address.
	* Makefile.am: iq6.epd removed from distribution.
	* test/: new directory, for test suites.
	* test/iq6.epd: moved from .
	* test/endgame.epd: new file, copied from CVS.
	* test/BT2630.epd: new file, copied from CVS.